# test-dag-ci

./: README.md  SETUP_AWS.md  bom.yml  pyproject.toml  renovate.json
.github/scripts/helm/: package-charts.sh
.github/scripts/staging/: copy-files.sh  remove-files.sh
.github/workflows/: ci.yml
charts/spectrophotometry-dags-charts/: Chart.yaml
charts/spectrophotometry-dags-charts/charts/: dag-charts-1.0.2.tgz
charts/spectrophotometry-dags-charts/configurations/: foss_nirs_6500.json  thermofisher_nanodrop.json
charts/test-dags-charts/: Chart.yaml  values.yaml
charts/test-dags-charts/templates/: dags-deployment.yaml
src/applications/: __init__.py
src/applications/spectrophotometry/: versions.py
src/datahub/plugins/foss_nirs_6500_archive/: load.py
src/datahub/plugins/thermofisher_nanodrop_archive/: load.py
src/tests/: conftest.py  mock_operators.py  property_mapping.json  test_spectrophotometry_archive.py
src/tests/testdatasets/foss_nirs_6500/: Acetone_2.txt
src/tests/testdatasets/thermofisher_nanodrop/: dsDNA 08-Dec-2023 13_38_55 Josh GCID 319 PCR_231208134944_result data.csv
