[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrophotometry-dags"
version = "1.0.0"
authors = [{name = "ZONTAL", email = "info@zontal.io"}]
description = "Airflow DAGs for the Spectrophotometry application"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "zontal-airflow-datahub==1.0.3"
]

[project.optional-dependencies]
airflow = [
    "zontal-airflow-datahub[airflow]==1.0.3"
]
test = [
  "ruff~=0.13.2",
  "pytest~=8.4",
  "zontal-airflow-datahub[test]==1.0.3",
  "zontal-parser-sdk==0.3.1"
]

[project.urls]
Repository = "https://gitlab.com/zontal/applications/spectrophotometry/spectrophotometry-dags"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff.lint.per-file-ignores]
"src/**.py" = ["PLC0415"]
